# rad

./: .gitignore  Dockerfile  README.md  example-parameters.json  extended_praise_table.csv  main.py  rad.sh  requirements.txt  start.sh  test.ipynb
.ipynb_checkpoints/: test-checkpoint.ipynb
my_reports/: 01-general-round-analysis.ipynb  02-cross-period-analysis.ipynb  test.ipynb
rad/: README.md  pyproject.toml
rad/src/: .gitignore
rad/src/rad/: __init__.py  distributionObjectBuilder.py  exports.py  rewardDistribution.py
rad/src/rad/praise/: __init__.py  praiseObj.py
rad/src/rad/praise/analysis/: __init__.py  agreement_check.py  cross_period_category_analysis.py  cross_period_helpers.py  cross_period_quantifier_stats.py  cross_period_round_stats.py  distribution_histogram.py  highest_rated_contributions.py  praise_flow.py  quantifier_boxplot.py  quantifier_scoring_analysis.py  report_summary.py  sort_by_controversial.py
rad/src/rad/praise/distribution/: __init__.py  standard_praise.py
rad/src/rad/praise/export/: aragon_distribution.py  basic_distribution_results.py  extended_praise_data.py  forum_post.py  full_praise_table.py
rad/src/rad/straight_distribution/: __init__.py  straightRewardsObj.py
rad/src/rad/straight_distribution/analysis/: __init__.py  histogram.py
rad/src/rad/straight_distribution/distribution/: __init__.py  straightDistribution.py
rad/src/rad/straight_distribution/export/: __init__.py
report_templates/: Cross-Period-Analysis.ipynb  Quantification-Analysis.ipynb
reports/: 01-general-round-analysis.ipynb
(+77 files in other folders)
